map-view/fix overlaps

--- a/css/App.css
+++ b/css/App.css
@@ -46,7 +46,7 @@
   display: flex; /* Enables flexbox layout for centering modal content */
   align-items: center; /* Centers modal content vertically */
   justify-content: center; /* Centers modal content horizontally */
-  z-index: 2000; /* high value to ensure it's above everything */
+  z-index: 9999; /* high value to ensure it's above everything */
 
 }
 
@@ -567,6 +567,17 @@
   }
   
 }
+
+.react-flow__controls {
+  bottom: 80px !important; /* default */
+}
+
+@media (max-width: 600px) {
+  .react-flow__controls {
+    bottom: 130px !important; /* raise it above nav bar */
+  }
+}
+
 .calendar-view-container {
   background-color: #fff3e0; /* Light orange background for calendar view */
   color: #e65100; /* Deep orange text color */
