--- a/css/TaskDetails.css
+++ b/css/TaskDetails.css
@@ -20,7 +20,7 @@
 
 .modal-content {
     /* Styled container for the modal's content */
-    background: #4e7993; /* Background color for the modal */
+    background: #d3dce2; /* Background color for the modal */
     padding: 20px; /* Inner spacing */
     border-radius: 10px; /* Rounded corners */
     width: 300px; /* Fixed width for the modal */
